--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -1855,6 +1855,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Drop extra features with Null values(more)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
