Streamlit homepage and menu - final version

--- a/cleaning.ipynb
+++ b/cleaning.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\andre\\anaconda3\\envs\\ML\\lib\\site-packages\\xgboost\\compat.py:36: FutureWarning: pandas.Int64Index is deprecated and will be removed from pandas in a future version. Use pandas.Index with the appropriate dtype instead.\n",
+      "  from pandas import MultiIndex, Int64Index\n"
+     ]
+    }
+   ],
    "source": [
     "# Dependencies\n",
     "from sklearn.utils._testing import ignore_warnings\n",
@@ -39,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,6 +224,157 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   android.sensor.accelerometer#mean  android.sensor.accelerometer#min  \\\n",
+      "0                           9.811476                          9.758895   \n",
+      "1                           9.939207                          7.707437   \n",
+      "2                           9.827178                          9.804817   \n",
+      "\n",
+      "   android.sensor.accelerometer#max  android.sensor.accelerometer#std  \\\n",
+      "0                          9.849411                          0.014626   \n",
+      "1                         17.146631                          1.775944   \n",
+      "2                          9.849262                          0.011199   \n",
+      "\n",
+      "   android.sensor.game_rotation_vector#mean  \\\n",
+      "0                                  0.029340   \n",
+      "1                                  0.999925   \n",
+      "2                                  0.665215   \n",
+      "\n",
+      "   android.sensor.game_rotation_vector#min  \\\n",
+      "0                                 0.029014   \n",
+      "1                                 0.999903   \n",
+      "2                                 0.665213   \n",
+      "\n",
+      "   android.sensor.game_rotation_vector#max  \\\n",
+      "0                                 0.029526   \n",
+      "1                                 0.999946   \n",
+      "2                                 0.665218   \n",
+      "\n",
+      "   android.sensor.game_rotation_vector#std  android.sensor.gyroscope#mean  \\\n",
+      "0                                 0.000119                       0.001651   \n",
+      "1                                 0.000030                       0.036326   \n",
+      "2                                 0.000004                       0.001525   \n",
+      "\n",
+      "   android.sensor.gyroscope#min  ...  android.sensor.rotation_vector#std  \\\n",
+      "0                      0.000000  ...                            0.002109   \n",
+      "1                      0.011669  ...                            0.000026   \n",
+      "2                      0.000000  ...                            0.011312   \n",
+      "\n",
+      "   sound#mean  sound#min  sound#max  sound#std  speed#mean  speed#min  \\\n",
+      "0         NaN        NaN        NaN        NaN    0.000000   0.000000   \n",
+      "1    89.20021  89.065143  89.335277   0.191013   16.539349  16.539349   \n",
+      "2         NaN        NaN        NaN        NaN    0.000000   0.000000   \n",
+      "\n",
+      "   speed#max  target  user  \n",
+      "0   0.000000   Still   U12  \n",
+      "1  16.539349     Car   U12  \n",
+      "2   0.000000   Still   U12  \n",
+      "\n",
+      "[3 rows x 37 columns]\n",
+      "   android.sensor.accelerometer#mean  android.sensor.accelerometer#min  \\\n",
+      "0                           9.811476                          9.758895   \n",
+      "1                           9.939207                          7.707437   \n",
+      "2                           9.827178                          9.804817   \n",
+      "\n",
+      "   android.sensor.accelerometer#max  android.sensor.accelerometer#std  \\\n",
+      "0                          9.849411                          0.014626   \n",
+      "1                         17.146631                          1.775944   \n",
+      "2                          9.849262                          0.011199   \n",
+      "\n",
+      "   android.sensor.game_rotation_vector#mean  \\\n",
+      "0                                  0.029340   \n",
+      "1                                  0.999925   \n",
+      "2                                  0.665215   \n",
+      "\n",
+      "   android.sensor.game_rotation_vector#min  \\\n",
+      "0                                 0.029014   \n",
+      "1                                 0.999903   \n",
+      "2                                 0.665213   \n",
+      "\n",
+      "   android.sensor.game_rotation_vector#max  \\\n",
+      "0                                 0.029526   \n",
+      "1                                 0.999946   \n",
+      "2                                 0.665218   \n",
+      "\n",
+      "   android.sensor.game_rotation_vector#std  android.sensor.gyroscope#mean  \\\n",
+      "0                                 0.000119                       0.001651   \n",
+      "1                                 0.000030                       0.036326   \n",
+      "2                                 0.000004                       0.001525   \n",
+      "\n",
+      "   android.sensor.gyroscope#min  ...  android.sensor.rotation_vector#std  \\\n",
+      "0                      0.000000  ...                            0.002109   \n",
+      "1                      0.011669  ...                            0.000026   \n",
+      "2                      0.000000  ...                            0.011312   \n",
+      "\n",
+      "   sound#mean  sound#min  sound#max  sound#std  speed#mean  speed#min  \\\n",
+      "0         NaN        NaN        NaN        NaN    0.000000   0.000000   \n",
+      "1    89.20021  89.065143  89.335277   0.191013   16.539349  16.539349   \n",
+      "2         NaN        NaN        NaN        NaN    0.000000   0.000000   \n",
+      "\n",
+      "   speed#max  target  user  \n",
+      "0   0.000000   Still   U12  \n",
+      "1  16.539349     Car   U12  \n",
+      "2   0.000000   Still   U12  \n",
+      "\n",
+      "[3 rows x 37 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def feature_enhancement(df):\n",
+    "    \n",
+    "    df_1 = df  # make a DataFrame copy\n",
+    "\n",
+    "    for speed in df['speed#mean'].unique():\n",
+    "        speed_data = df_1[df_1['speed#mean'] == speed]\n",
+    "        linear_acceleration_mean = speed_data['android.sensor.linear_acceleration#mean'].mean()\n",
+    "        rotation_vector_mean = speed_data['android.sensor.rotation_vector#mean'].mean()\n",
+    "        \n",
+    "        # t1_mean = seasonal_data['t1'].mean()\n",
+    "        # t2_mean = seasonal_data['t2'].mean()\n",
+    "\n",
+    "        for i in df_1[df_1['speed#mean'] == speed].index:\n",
+    "            if np.random.randint(2) == 1:       # Return random integers from low (inclusive) to high (exclusive).\n",
+    "                df_1['android.sensor.linear_acceleration#mean'].values[i] += linear_acceleration_mean/10\n",
+    "            else:\n",
+    "                df_1['android.sensor.linear_acceleration#mean'].values[i] -= linear_acceleration_mean/10\n",
+    "\n",
+    "            if np.random.randint(2) == 1:       # Return random integers from low (inclusive) to high (exclusive).\n",
+    "                df_1['android.sensor.rotation_vector#mean'].values[i] += rotation_vector_mean/10\n",
+    "            else:\n",
+    "                df_1['android.sensor.rotation_vector#mean'].values[i] -= rotation_vector_mean/10\n",
+    "\n",
+    "            # if np.random.randint(2) == 1:\n",
+    "            #     df_1['wind_speed'].values[i] += wind_speed_mean/10\n",
+    "            # else:\n",
+    "            #     df_1['wind_speed'].values[i] -= wind_speed_mean/10\n",
+    "\n",
+    "            # if np.random.randint(2) == 1:\n",
+    "            #     df_1['t1'].values[i] += t1_mean/10\n",
+    "            # else:\n",
+    "            #     df_1['t1'].values[i] -= t1_mean/10\n",
+    "\n",
+    "            # if np.random.randint(2) == 1:\n",
+    "            #     df_1['t2'].values[i] += t2_mean/10\n",
+    "            # else:\n",
+    "            #     df_1['t2'].values[i] -= t2_mean/10\n",
+    "\n",
+    "    return df_1\n",
+    "\n",
+    "\n",
+    "print(df.head(3))\n",
+    "gen = feature_enhancement(df)\n",
+    "print(gen.head(3) )"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -223,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +435,7 @@
        "Name: target, dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +460,7 @@
        "Name: target, dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,14 +501,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 7/7 [00:59<00:00,  8.54s/it]"
+      "100%|██████████| 6/6 [01:43<00:00, 17.24s/it]"
      ]
     },
     {
@@ -357,13 +517,12 @@
      "text": [
       "Performance: \n",
       "      name  test_accuracy  balanced_accuracy  training_time  predicting_time\n",
-      "0  extraT       0.947461           0.907546       4.366999         1.008017\n",
-      "0      rf       0.945709           0.893580       6.652926         1.075130\n",
-      "0     mlp       0.935201           0.848967      17.913111         1.581082\n",
-      "0      gb       0.928196           0.871469       9.378581         1.017145\n",
-      "0     svm       0.915061           0.890803       4.290997         1.124035\n",
-      "0      dt       0.900175           0.804745       4.121532         0.991985\n",
-      "0     sgd       0.874781           0.817745       4.830139         1.435273\n"
+      "0  extraT       0.945709           0.893580       9.689283         2.077738\n",
+      "0      rf       0.943082           0.879161      12.677304         2.203346\n",
+      "0      gb       0.933450           0.887245      20.978834         2.100884\n",
+      "0     mlp       0.921191           0.828666      32.132695         1.984146\n",
+      "0     sgd       0.914186           0.851168       7.593569         2.027148\n",
+      "0      dt       0.797723           0.751804       7.984505         1.967644\n"
      ]
     },
     {
@@ -381,7 +540,7 @@
     "          'dt': DecisionTreeClassifier(),\n",
     "          'extraT': ExtraTreesClassifier(),\n",
     "        #   'xgb':XGBClassifier(),\n",
-    "          'svm': SVC(), \n",
+    "          # 'svm': SVC(), \n",
     "          'mlp': MLPClassifier(random_state=0, max_iter=1000),\n",
     "          'sgd': SGDClassifier(random_state=0)\n",
     "          }\n",
@@ -394,6 +553,54 @@
     "\n",
     "results = perfomance(pipes, X_train, y_train, X_test, y_test)\n",
     "print('Performance: \\n', results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Performance\n",
+    "\n",
+    "'''100%|██████████| 7/7 [00:59<00:00,  8.54s/it]Performance: \n",
+    "      name  test_accuracy  balanced_accuracy  training_time  predicting_time\n",
+    "0  extraT       0.947461           0.907546       4.366999         1.008017\n",
+    "0      rf       0.945709           0.893580       6.652926         1.075130\n",
+    "0     mlp       0.935201           0.848967      17.913111         1.581082\n",
+    "0      gb       0.928196           0.871469       9.378581         1.017145\n",
+    "0     svm       0.915061           0.890803       4.290997         1.124035\n",
+    "0      dt       0.900175           0.804745       4.121532         0.991985\n",
+    "0     sgd       0.874781           0.817745       4.830139         1.435273'''\n",
+    "\n",
+    "\n",
+    "''' 67%|██████▋   | 4/6 [00:53<00:24, 12.34s/it]Performance: \n",
+    "      name  test_accuracy  balanced_accuracy  training_time  predicting_time\n",
+    "0      rf       0.945709           0.693580      11.541250         2.053826\n",
+    "0  extraT       0.944834           0.493127       8.054577         2.001302\n",
+    "0     mlp       0.935201           0.748967      24.396078         1.897758\n",
+    "0      gb       0.928196           0.771469      18.608749         1.879030\n",
+    "0      dt       0.885289           0.349297       7.382676         1.878095\n",
+    "0     sgd       0.874781           0.617745       6.782888         1.872854'''\n",
+    "\n",
+    "\n",
+    "'''100%|██████████| 6/6 [02:37<00:00, 26.27s/it]Performance: \n",
+    "      name  test_accuracy  balanced_accuracy  training_time  predicting_time\n",
+    "0     sgd       0.436077           0.510478       7.333369         1.847857\n",
+    "0      rf       0.408932           0.466094      11.030942         1.924400\n",
+    "0  extraT       0.402802           0.465274       8.408334         2.063710\n",
+    "0      gb       0.401051           0.434093      67.601697         1.856730\n",
+    "0     mlp       0.394921           0.451630      44.612878         1.812992\n",
+    "0      dt       0.325744           0.384753       7.186589         1.841259'''\n",
+    "\n",
+    "'''Performance: \n",
+    "      name  test_accuracy  balanced_accuracy  training_time  predicting_time\n",
+    "0      rf       0.943082           0.879161      11.130696         1.944735\n",
+    "0  extraT       0.942207           0.891770       7.741236         1.920851\n",
+    "0      gb       0.933450           0.887245      18.548395         1.909164\n",
+    "0     mlp       0.921191           0.828666      27.557061         1.688993\n",
+    "0     sgd       0.914186           0.851168       7.150637         2.096133\n",
+    "0      dt       0.831874           0.808634       7.372568         1.844576'''\n"
    ]
   },
   {
@@ -463,10 +670,10 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "57b4146e8602cb0ff91512065bdb02700ac9f9d6ea9aa046f2e5f7c3a69675f8"
+   "hash": "35717f1c4f95342094abc4f6ac6148258ab8398bdcca50048c184145a1017736"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.13 ('strive')",
+   "display_name": "Python 3.9.12 ('ML')",
    "language": "python",
    "name": "python3"
   },
@@ -480,7 +687,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.9.12"
   },
   "orig_nbformat": 4
  },
